# MobileManipulator

./: .gitignore  LICENSE  README.md  hand_eye_result.yaml
arm/arm_control/: package.xml  setup.py  test_j1.py
arm/arm_control/arm_control/: PCANBasic.py  __init__.py  can_bridge.py  can_interface.py  joint_gui.py  motor_control.py
arm/arm_control/config/: robot_arm_config.json
arm/arm_description/: CMakeLists.txt  package.xml
arm/arm_description/config/: joint_names_arm_description.yaml
arm/arm_description/launch/: display.launch.py  gazebo.launch.py
arm/arm_description/meshes/: Link_1.stl  Link_2.stl  Link_3.stl  Link_4.stl  Link_5.stl  Link_6.stl  base_link.stl
arm/arm_description/urdf/: arm_description.csv  arm_description.urdf
arm/arm_moveit_config/: .setup_assistant  package.xml
arm/arm_moveit_config/config/: arm_description.ros2_control.xacro  arm_description.srdf  arm_description.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
arm/arm_moveit_config/config.bak.20260606_104209/: arm_description.ros2_control.xacro  arm_description.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
arm/arm_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  real_bringup.launch.py
docs/: interface_contract.md  pcan_setup.md  system_architecture.md
docs/scripts/: install_pcan.sh
firmware/chassis/: platformio.ini
firmware/chassis/include/: config.h
firmware/chassis/lib/Arduino-INA226/src/: INA226.cpp
firmware/chassis/lib/Encoder/: Encoder.cpp  Encoder.h
firmware/chassis/lib/Imu/: ImuSensor.cpp  ImuSensor.h
firmware/chassis/lib/Kinematics/: Kinematics.cpp  Kinematics.h
firmware/chassis/lib/MicroRosBridge/: MicroRosBridge.cpp  MicroRosBridge.h
firmware/chassis/lib/Motor/: Motor.cpp  Motor.h
firmware/chassis/lib/PidController/: PidController.cpp  PidController.h
firmware/chassis/lib/PowerMonitor/: PowerMonitor.cpp  PowerMonitor.h
firmware/chassis/src/: main.cpp
mm_bringup/: CMakeLists.txt  package.xml
mm_bringup/config/: ekf.yaml
mm_bringup/launch/: dev_bringup.launch.py  lidar_test.launch.py  mock_perception.launch.py  nano_bringup.launch.py  real_bringup.launch.py  sim_bringup.launch.py
mm_bringup/scripts/: mock_object_detector.py  mock_suction.py  place_box_helper.py
mm_description/: CMakeLists.txt  package.xml
mm_description/config/: omni_ros2_controllers.yaml
mm_description/config/rviz/: display_model.rviz
mm_description/launch/: display.launch.py  gazebo.launch.py  gazebo_mm.launch.py
mm_description/meshes/: Link_10.stl  Link_11.stl  Link_12.stl  Link_13.stl  Link_14.stl  Link_20.stl  Link_21.stl  Link_22.stl  Link_24.stl  Link_25.stl  Link_29.stl  Link_30.stl  Link_6.stl  Link_7.stl  Link_9.stl
mm_description/scripts/: cmd_vel_smoother.py  custom_keyboard_control.py  regen_world.sh
mm_description/src/: omni_kinematics.cpp
mm_description/urdf/: mm_arm_ros2_control_gazebo.xacro  mm_robot.urdf  mm_robot_gazebo.urdf.xacro  omni_base.ros2_control.xacro  omni_base.urdf.xacro  omni_wheel.urdf.xacro
mm_description/world/: mm_world.world  room.word
mm_description/world/room/: model.sdf
mm_grasp/: CMakeLists.txt  package.xml
mm_grasp/config/: servo.yaml
mm_grasp/launch/: grasp.launch.py
mm_grasp/src/: grasp_node.cpp
mm_moveit_config/: CMakeLists.txt  package.xml
mm_navigation/: CMakeLists.txt  omni_line_controller.xml  package.xml
mm_navigation/config/: lane_graph.yaml  nav2_params.yaml
mm_navigation/include/mm_navigation/: omni_line_controller.hpp
mm_navigation/launch/: navigation2.launch.py
mm_navigation/maps/: room.pgm  room.yaml
mm_navigation/scripts/: lane_navigator.py  waypoint_patrol.py
mm_navigation/src/: omni_line_controller.cpp
mm_perception/: package.xml  setup.cfg  setup.py  usb_camera_view.py
mm_perception/config/: aruco_localizer.yaml  default_camera_info.yaml  hand_eye_calib.yaml  hand_eye_verify.yaml  usb_cam.yaml  yolo_box_detector.yaml
mm_perception/launch/: aruco_localizer.launch.py  aruco_real.launch.py  cameras.launch.py  hand_eye_calib.launch.py  hand_eye_camera_check.launch.py  hand_eye_verify.launch.py  yolo_box_detector.launch.py
mm_perception/mm_perception/: _tv_stub.py  aruco_localizer.py  hand_eye_calibrator.py  hand_eye_camera_check.py  hand_eye_verify.py  image_rotator.py  yolo_box_detector.py
mm_perception/models/best_ncnn_model/: metadata.yaml  model.ncnn.param
mm_perception/test/: e2e_pipeline_check.py  verify_dolly.sh  verify_hand_eye_math.py  verify_handeye_live.py  verify_real_cam.sh  verify_sim_chain.sh
mm_task/: package.xml  setup.cfg  setup.py
mm_task/config/: grasp.yaml  mission.yaml
mm_task/launch/: grasp.launch.py  mission.launch.py
mm_task/mm_task/: grasp_node.py  mission_manager.py
